--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
